--- a/request-service.html
+++ b/request-service.html
@@ -465,16 +465,15 @@
         </div>
         <!--//app-content-->
     </div>
-
     <!-- Detail Modal -->
-    <div class="modal fade" id="request-service-detail" tabindex="-1" role="dialog" aria-labelledby="request-service-detail-title" aria-hidden="true">
+    <div class="modal fade" id="service-request-detail" tabindex="-1" role="dialog" aria-labelledby="service-request-detail-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="request-service-detail-title">Detail Request</h5>
+                    <h5 class="modal-title" id="service-request-detail-title">Detail Request</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+        <span aria-hidden="true">&times;</span>
+      </button>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -488,7 +487,6 @@
                         </div><br/>
                     </div>
                     <br/>
-
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
                             <div class="custom-div-right">Block:</div>
@@ -497,13 +495,12 @@
                             <input type="text" class="form-control" id="identify-card-detail" name="identify-card" />
                         </div>
                     </div><br/>
-
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Room Number:</div>
+                            <div class="custom-div-right">Block:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="phone-number-detail" name="phone-number" />
+                            <input type="text" class="form-control" id="identify-card-detail" name="identify-card" />
                         </div>
                     </div><br/>
                     <div class="row">
@@ -519,18 +516,9 @@
                             <div class="custom-div-right">Description:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <textarea type="text" class="form-control" id="phone-number-detail" name="phone-number" />
+                            <textarea type="text" class="form-control" id="phone-number-detail" name="phone-number"></textarea>
                         </div>
                     </div><br/>
-                    <div class="row">
-                        <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Price:</div>
-                        </div>
-                        <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="phone-number-detail" name="phone-number" />
-                        </div>
-                    </div>
-                    <br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
                             <div class="custom-div-right">Status:</div>
@@ -541,6 +529,7 @@
                     </div><br/>
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -549,14 +538,14 @@
     <!-- End Detail Modal -->
 
     <!-- Update Modal -->
-    <div class="modal fade" id="request-service-update" tabindex="-1" role="dialog" aria-labelledby="request-service-update-title" aria-hidden="true">
+    <div class="modal fade" id="service-request-update" tabindex="-1" role="dialog" aria-labelledby="service-request-update-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="request-service-update-title">Update Request</h5>
+                    <h5 class="modal-title" id="service-request-update-title">Update Request</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+        <span aria-hidden="true">&times;</span>
+      </button>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -565,10 +554,10 @@
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <select class="form-select" aria-label="Default select example">
-                                <option select value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                              </select>
+                            <option select value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
                         </div>
 
                     </div>
