--- a/service.html
+++ b/service.html
@@ -440,20 +440,20 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <br/>
                                     <div class="row">
                                         <div class="col-md-9"></div>
                                         <div class="col-md-2" style="text-align: right;">
-                                            <button type="button" class="btn btn-success collapsed" onclick="addService();">
-                                                Add Service
-                                            </button> </div>
-                                        <div class="col-md-1" style="text-align: right;">
                                             <button type="button" class="btn btn-success collapsed" onclick="addSubService();">
-                                                    Add Sub
-                                                </button> </div>
+                                                    Add Sub Service
+                                                </button>
+                                        </div>
+                                        <div class="col-md-1" style="text-align: right;">
+                                            <button type="button" class="btn btn-success collapsed" onclick="addService();">
+                                                        Add Service
+                                                    </button>
+                                        </div>
                                     </div>
                                     <br/>
-
                                     <div class="row">
                                         <div style="max-height: 600px; overflow: auto;">
                                             <div class="table-responsive">
@@ -474,40 +474,89 @@
         <!--//app-content-->
     </div>
     <!-- Add Modal -->
-    <div class="modal fade" id="apartment-card-add" tabindex="-1" role="dialog" aria-labelledby="apartment-card-add-title" aria-hidden="true">
+    <div class="modal fade" id="service-add" tabindex="-1" role="dialog" aria-labelledby="service-add-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="apartment-card-add-title">Add Apartment Card</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="removeDataAdd();">
+                    <h5 class="modal-title" id="service-add-title">Add Service </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
                 </div>
                 <div class="modal-body">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm-3 col-xs-3">
+                                <div class="custom-div-right">Service Name:</div>
+                            </div>
+                            <div class="col-sm-9 col-xs-9">
+                                <input type="text" class="form-control" id="name" name="name" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Add Modal -->
+
+    <!-- Add Modal -->
+    <div class="modal fade" id="sub-service-add" tabindex="-1" role="dialog" aria-labelledby="sub-service-add-title" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="sub-service-add-title">Add Sub Service </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+                </div>
+                <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Name:</div>
+                            <div class="custom-div-right">Sub Service Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <input type="text" class="form-control" id="name" name="name" />
                         </div>
-                    </div>
-                    <br/>
+                    </div><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Phone Number:</div>
+                            <div class="custom-div-right">Service Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="phone-number" name="phone-number" />
+                            <select class="form-select" aria-label="Default select example">
+                                <option select value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                              </select>
                         </div>
-                    </div>
-                    <br/>
+                    </div><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Identify Card:</div>
+                            <div class="custom-div-right">Detail Sub Service:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="identify-card" name="identify-card" />
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Reason Sub Service:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Price:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
                         </div>
                     </div>
                 </div>
@@ -521,11 +570,11 @@
     <!-- End Add Modal -->
 
     <!-- Detail Modal -->
-    <div class="modal fade" id="apartment-card-detail" tabindex="-1" role="dialog" aria-labelledby="apartment-card-detail-title" aria-hidden="true">
+    <div class="modal fade" id="service-detail" tabindex="-1" role="dialog" aria-labelledby="service-detail-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="apartment-card-detail-title">Detail Apartment Card</h5>
+                    <h5 class="modal-title" id="service-detail-title">Detail Service</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -533,36 +582,42 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Name:</div>
+                            <div class="custom-div-right">Sub Service Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <input type="text" class="form-control" id="name" name="name" />
                         </div>
-                    </div>
-                    <br/>
+                    </div><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Phone Number:</div>
+                            <div class="custom-div-right">Service Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="phone-number-detail" name="phone-number" />
+                            <input type="text" class="form-control" id="name" name="name" />
                         </div>
-                    </div>
-                    <br/>
+                    </div><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Identify Card:</div>
+                            <div class="custom-div-right">Detail Sub Service:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="identify-card-detail" name="identify-card" />
+                            <input type="text" class="form-control" id="name" name="name" />
                         </div>
-                    </div>
+                    </div><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Code Card :</div>
+                            <div class="custom-div-right">Reason Sub Service:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <input type="text" class="form-control" id="code-card-detail" name="code-card" />
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Price:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
                         </div>
                     </div>
                 </div>
@@ -576,11 +631,11 @@
     <!-- End Detail Modal -->
 
     <!-- Update Modal -->
-    <div class="modal fade" id="apartment-card-update" tabindex="-1" role="dialog" aria-labelledby="apartment-card-update-title" aria-hidden="true">
+    <div class="modal fade" id="service-update" tabindex="-1" role="dialog" aria-labelledby="service-update-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="apartment-card-update-title">Update Apartment Card</h5>
+                    <h5 class="modal-title" id="service-update-title">Update Serviced</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -588,7 +643,15 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Status:</div>
+                            <div class="custom-div-right">Sub Service Name:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Service Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <select class="form-select" aria-label="Default select example">
@@ -597,7 +660,30 @@
                                 <option value="3">Three</option>
                               </select>
                         </div>
-
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Detail Sub Service:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Reason Sub Service:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
+                    </div><br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Price:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="name" name="name" />
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -610,11 +696,11 @@
     <!-- End Update Modal -->
 
     <!-- Remove Modal -->
-    <div class="modal fade" id="apartment-card-remove" tabindex="-1" role="dialog" aria-labelledby="apartment-card-remove-title" aria-hidden="true">
+    <div class="modal fade" id="service-remove" tabindex="-1" role="dialog" aria-labelledby="service-remove-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="apartment-card-remove-title">Remove Apartment Card</h5>
+                    <h5 class="modal-title" id="service-remove-title">Remove Service</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true ">&times;</span>
           </button>
