--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                     <div class="app-auth-branding mb-4">
                         <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/logo2.png" alt="logo"></a>
                     </div>
-                    <h2 class="auth-heading text-center mb-5">Log in to Portal</h2>
+                    <h2 class="auth-heading text-center mb-5">Log in to AMS Building</h2>
                     <div class="auth-form-container text-start">
                         <form class="auth-form login-form">
                             <div class="email mb-3">
