--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="sidepanel-inner d-flex flex-column">
                 <a href="#" id="sidepanel-close" class="sidepanel-close d-xl-none">&times;</a>
                 <div class="app-branding">
-                    <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/logo2.png" alt="logo"><span class="logo-text">AMS BUILDING</span></a>
+                    <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/logo2.png" alt="logo"><img class="logo-icon me-2" src="assets/images/logo.png" alt="logo"></a>
 
                 </div>
                 <!--//app-branding-->
