Fix logo in nav

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-12 col-md-11 col-lg-7 col-xl-6 mx-auto">
                 <div class="app-branding text-center mb-5">
-                    <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/logo2.png" alt="logo"><span class="logo-text">AMS Building</span></a>
+                    <a class="app-logo" href="index.html"><span class="logo-text" style="font-size: 27px;"><i>AMS BUILDING</i></span></a>
 
                 </div>
                 <!--//app-branding-->
