--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <div class="d-flex flex-column align-content-end">
                 <div class="app-auth-body mx-auto">
                     <div class="app-auth-branding mb-4">
-                        <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/logo2.png" alt="logo"></a>
+                        <a class="app-logo" href="index.html"><span class="logo-text" style="font-size: 27px;"><i>AMS BUILDING</i></span></a>
                     </div>
                     <h2 class="auth-heading text-center mb-5">Log in to AMS Building</h2>
                     <div class="auth-form-container text-start">
