--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
             <div class="sidepanel-inner d-flex flex-column">
                 <a href="#" id="sidepanel-close" class="sidepanel-close d-xl-none">&times;</a>
                 <div class="app-branding">
-                    <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/logo2.png" alt="logo"><img class="logo-icon me-2" src="assets/images/logo.png" alt="logo"></a>
-
+                    <a class="app-logo" href="index.html"><span class="logo-text" style="font-size: 27px;"><i>AMS BUILDING</i></span></a>
                 </div>
                 <!--//app-branding-->
 
