--- a/feeback.html
+++ b/feeback.html
@@ -171,7 +171,7 @@
             <div id="sidepanel-drop" class="sidepanel-drop"></div>
             <div class="sidepanel-inner d-flex flex-column">
                 <a href="#" id="sidepanel-close" class="sidepanel-close d-xl-none">&times;</a>
-                <div class="app-branding">
+                <div class="app-branding" style="margin:auto;">
                     <a class="app-logo" href="index.html"><span class="logo-text" style="font-size: 27px;"><i>AMS BUILDING</i></span></a>
 
                 </div>
