--- a/department.html
+++ b/department.html
@@ -474,7 +474,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Department Name:</div>
+                            <div>Department Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <input type="text" class="form-control" id="department-detail" name="department-detail" />
@@ -513,7 +513,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
-                            <div class="custom-div-right">Department Name:</div>
+                            <div>Department Name:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <input type="text" class="form-control" id="department-update" name="department-update" />
