--- a/employee.html
+++ b/employee.html
@@ -610,11 +610,10 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="employee-detail-title">Detail Employee</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-<span aria-hidden="true">&times;</span>
-</button>
+                    <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
-                    <br/><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
                             <div class="custom-div-right">Name:</div>
@@ -624,82 +623,95 @@
                         </div>
                     </div>
                     <br/>
+
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
                             <div class="custom-div-right">Gender:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
                             <input type="text" class="form-control" id="gender-detail" name="gender-detail" />
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Date of birth:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="dob-detail" name="dob-detail" />
-                            </div>
                         </div>
-                        <br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Phone Number:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="phone-number-detail" name="phone-number-detail" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Email:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="email-detail" name="email-detail" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Identify Card:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="identify-card-detail" name="identify-card-detail" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Current Address:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="current-address-detail" name="current-address-detail" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Home town:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="home-town-detail" name="home-town-detail" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Department Name:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="department-detail" name="department-detail" />
-                            </div><br/><br/>
-                            <div class="row">
-                                <div class="col-sm-3 col-xs-3">
-                                    <div class="custom-div-right">Is Manager:</div>
-                                </div>
-                                <div class="col-sm-9 col-xs-9">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="manager-detail">
-                                        <label class="form-check-label" for="manager-detail"></label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><br/><br/><br/>
                     </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Date of birth:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="dob-detail" name="dob-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Phone Number:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="phone-number-detail" name="phone-number-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Email:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="email-detail" name="email-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Identify Card:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="identify-card-detail" name="identify-card-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Current Address:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="current-address-detail" name="current-address-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Home town:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="home-town-detail" name="home-town-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Department Name:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="department-detail" name="department-detail" />
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Is Manager:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9" style="padding: 0px;">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="manager-detail" style="margin-left:9px;margin-top:10px;">
+                        </div>
+                    </div>
+                    <br/>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -720,7 +732,6 @@
 </button>
                 </div>
                 <div class="modal-body">
-                    <br/><br/>
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
                             <div class="custom-div-right">Name:</div>
@@ -730,6 +741,7 @@
                         </div>
                     </div>
                     <br/>
+
                     <div class="row">
                         <div class="col-sm-3 col-xs-3">
                             <div class="custom-div-right">Gender:</div>
@@ -743,83 +755,92 @@
                                 <input class="form-check-input" type="radio" name="gender" id="female" value="option2">
                                 <label class="form-check-label" for="gemale">Female</label>
                             </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Date of birth:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <div id="dp-range">
-                                    <div class="input-daterange input-group" id="datepicker">
-                                        <input type="text" class="form-control" autocomplete="off" id="start-date" readonly="readonly">
-                                    </div>
-                                </div>
-                            </div>
                         </div>
-                        <br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Phone Number:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="phone-number-add" name="phone-number-add" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Email:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="email-add" name="email-add" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Identify Card:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="identify-card-add" name="identify-card-add" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Current Address:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="current-address-add" name="current-address-add" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Home town:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <input type="text" class="form-control" id="home-town-add" name="home-town-add" />
-                            </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Department Name:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <select class="form-select" aria-label="Default select example">
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                  </select> </div>
-                        </div><br/><br/>
-                        <div class="row">
-                            <div class="col-sm-3 col-xs-3">
-                                <div class="custom-div-right">Is Manager:</div>
-                            </div>
-                            <div class="col-sm-9 col-xs-9">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="manager-add">
-                                    <label class="form-check-label" for="manager-add"></label>
-                                </div>
-                            </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Date of birth:</div>
                         </div>
-                    </div><br/><br/><br/>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="dob-detail" name="dob-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Phone Number:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="phone-number-detail" name="phone-number-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Email:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="email-detail" name="email-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Identify Card:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="identify-card-detail" name="identify-card-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Current Address:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="current-address-detail" name="current-address-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Home town:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <input type="text" class="form-control" id="home-town-detail" name="home-town-detail" />
+                        </div>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Department Name:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9">
+                            <select class="form-select" aria-label="Default select example">
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                              </select>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-3">
+                            <div class="custom-div-right">Is Manager:</div>
+                        </div>
+                        <div class="col-sm-9 col-xs-9" style="padding: 0px;">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="manager-detail" style="margin-left:9px;margin-top:10px;">
+                        </div>
+                    </div>
+                    <br/>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
