--- a/login.html
+++ b/login.html
@@ -1,92 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <title>AMS Building | Login</title>
-
-    <!-- Meta -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" i ntegrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="assets/css/plugin/boostrap.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/custom/form.css">
+
+    <title>Login | AMS Building</title>
+
     <link rel="shortcut icon" href="assets/images/avatar.png">
-
-    <!-- FontAwesome JS-->
-    <script defer src="assets/plugins/fontawesome/js/all.min.js"></script>
-
-    <!-- App CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/custom/portal.css">
-    <link id="theme-style" rel="stylesheet" href="assets/css/custom/footer.css">
 
 </head>
 
-<body class="app app-login p-0">
-    <div class="row g-0 app-auth-wrapper">
-        <div class="col-12 col-md-7 col-lg-6 auth-main-col text-center p-5">
-            <div class="d-flex flex-column align-content-end">
-                <div class="app-auth-body mx-auto">
-                    <div class="app-auth-branding mb-4">
-                        <a class="app-logo" href="index.html"><span class="logo-text" style="font-size: 27px;"><i>AMS BUILDING</i></span></a>
-                    </div>
-                    <h2 class="auth-heading text-center mb-5">Log in to AMS Building</h2>
-                    <div class="auth-form-container text-start">
-                        <form class="auth-form login-form">
-                            <div class="email mb-3">
-                                <label class="sr-only" for="signin-phone">Username</label>
-                                <input id="signin-phone" name="signin-phone" type="number" class="form-control signin-phone" placeholder="Phone number" required="required">
-                            </div>
-                            <!--//form-group-->
-                            <div class="password mb-3">
-                                <label class="sr-only" for="signin-password">Password</label>
-                                <input id="signin-password" name="signin-password" type="password" class="form-control signin-password" placeholder="Password" required="required">
-                                <div class="extra mt-3 row justify-content-between">
-                                    <div class="col-6">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="RememberPassword">
-                                            <label class="form-check-label" for="RememberPassword">
-											Remember me
-											</label>
-                                        </div>
-                                    </div>
-                                    <!--//col-6-->
-                                    <div class="col-6">
-                                        <div class="forgot-password text-end">
-                                            <a href="reset-password.html">Forgot password?</a>
-                                        </div>
-                                    </div>
-                                    <!--//col-6-->
-                                </div>
-                                <!--//extra-->
-                            </div>
-                            <!--//form-group-->
-                            <div class="text-center">
-                                <button type="submit" class="btn app-btn-primary w-100 theme-btn mx-auto">Log In</button>
-                            </div>
-                        </form>
-                    </div>
-                    <!--//auth-form-container-->
+<body>
 
+    <div id="intro">
+        <div class="middle signin">
+            <div class="login-panel">
+                <div class="logo text-center"><br />
+                    <a href="#">
+                        <p>AMS Building</p>
+                    </a><br /><br />
                 </div>
-                <!--//auth-body-->
-
-                <footer class="app-auth-footer">
-                    <div class="container text-center py-3">
-                        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-                        <small class="copyright" style="color: black;">© 2021 Copyright <i class="fas fa-heart" style="color: #fb866a;"></i> by <a class="app-link" href="index.html" >ams.building.com</a></small>
+                <div class="form-group">
+                    <label>
+                            <i class="fas fa-user fa-fw"></i>
+                        </label>
+                    <input type="text" class="form-control" placeholder="Phone Number" name="txtEmployeeCode" required />
+                </div>
+                <div class="form-group">
+                    <label>
+                            <i class="fas fa-key fa-fw"></i>
+                        </label>
+                    <input type="password" class="form-control" placeholder="Password" name="txtPassword" required />
+                </div>
+                <br>
+                <div class="form-group">
+                    <div class="col">
+                        <a href="index.html">
+                            <button type="submit" class="btn btn-sm">
+                                <i class="fas fa-sign-in-alt fa-fw mr-1"></i>Login
+                            </button></a>
                     </div>
-                </footer>
-                <!--//app-auth-footer-->
+                </div>
+                <div class="form-group">
+                    <div class="col">
+                        <a class="link-effect" href="#">
+                        </a>
+                        <a class="link-effect float-right" href="reset-password.html">
+                            <i class="fas fa-question fa-fw mr-1"></i>Forgot password
+                        </a><br /><br />
+                    </div>
+                </div>
             </div>
-            <!--//flex-column-->
-        </div>
-        <!--//auth-main-col-->
-        <div class="col-12 col-md-5 col-lg-6 h-100 auth-background-col" style="	background: url('assets/images/background/background-1.jpg') no-repeat ;  
-        height: 100%; 
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;">
         </div>
     </div>
-    <!--//row-->
+
+    <footer class="footer">
+        <p>
+            © 2021 AMS Building
+        </p>
+    </footer>
+
+    <!-- Bootstrap core JavaScript-->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
+    <script src="assets/js/plugin/popper.min.js"></script>
+    <script src="assets/js/plugin/boostrap.min.js"></script>
+
 </body>
 
 </html>
