--- a/resident.html
+++ b/resident.html
@@ -632,39 +632,21 @@
                             <div class="custom-div-right">Block:</div>
                         </div>
                         <div class="col-sm-9 col-xs-9">
-                            <div class="row">
-                                <div class="col-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="a1">
-                                        <label class="form-check-label" for="a1">
-                                          A1
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="a2">
-                                        <label class="form-check-label" for="a2">
-                                          A2
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="a3">
-                                        <label class="form-check-label" for="a3">
-                                          A3
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="a4">
-                                        <label class="form-check-label" for="a4">
-                                          A4
-                                        </label>
-                                    </div>
-                                </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="block" id="block" value="option1" checked>
+                                <label class="form-check-label" for="a1">A1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="block" id="block" value="option2">
+                                <label class="form-check-label" for="a2">A2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="block" id="block" value="option3">
+                                <label class="form-check-label" for="a3">A3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="block" id="block" value="option4">
+                                <label class="form-check-label" for="a4">A4</label>
                             </div>
                         </div>
                     </div><br/>
